# OrcaSlicer

./: CLAUDE.md  README.md
docs/cli/: build.md  manual-test.md  status.md
docs/cli/notes/: 2026-05-22-cross-project-convergence-log.md  2026-05-22-orca-cli-audit.md
docs/superpowers/plans/: 2026-05-19-orca-cli-cleanup.md  2026-05-19-orca-cli.md  2026-05-20-orca-cli-merge-parts.md  2026-05-20-orca-cli-project-tab.md  2026-05-20-orca-cli-split-to-parts.md
docs/superpowers/specs/: 2026-05-19-orca-cli-design.md  2026-05-20-orca-cli-merge-parts-design-WIP.md  2026-05-20-orca-cli-merge-parts-design.md  2026-05-20-orca-cli-project-tab-design.md  2026-05-20-orca-cli-split-to-parts-design.md
src/: CMakeLists.txt  OrcaSlicer.cpp
src/cli/: CMakeLists.txt  globals.cpp  globals.hpp  invariants.cpp  invariants.hpp  io.cpp  io.hpp  main.cpp  nanosvg_impl.cpp  output.cpp  output.hpp  placement.cpp  placement.hpp  png_placeholder.cpp  png_placeholder.hpp  project_ops.cpp  project_ops.hpp  project_tab_ops.cpp  project_tab_ops.hpp
src/cli/commands/: config.cpp  config.hpp  inspect.cpp  inspect.hpp  mutation_runner.hpp  object.cpp  object.hpp  object_parse_vec3.cpp  object_parse_vec3.hpp  plate.cpp  plate.hpp  project_init.cpp  project_init.hpp  project_tab.cpp  project_tab.hpp
src/libslic3r/: Preset.cpp
src/slic3r/GUI/: GUI_App.cpp
src/slic3r/Utils/: OrcaCloudServiceAgent.cpp
tests/: CMakeLists.txt
tests/cli/: CMakeLists.txt  archive_invariants.cpp  archive_invariants.hpp  test_common.cpp  test_common.hpp  test_main.cpp
tests/cli/e2e/: test_config.cpp  test_inspect.cpp  test_merge.cpp  test_object.cpp  test_plate.cpp  test_project_init.cpp  test_project_tab.cpp  test_smoke.cpp  test_split.cpp
tests/cli/fixtures/: 000_01_test_bambu_cube.stl  000_01_test_cone.stl  000_01_test_cube.stl  000_01_test_cylinder.stl  assembly_smoke.txt  box_with_text.stl  gen_minimal_stls.cpp  temp_project_for_orca_slicer.3mf  two_cubes.stl
tests/cli/roundtrip/: test_merge.cpp  test_output_flag.cpp  test_plate.cpp  test_project_init.cpp  test_project_tab.cpp  test_save_atomic.cpp  test_split.cpp
tests/cli/unit/: test_invariants.cpp  test_mutation_runner.cpp  test_object_parse_vec3.cpp  test_output.cpp  test_placement.cpp  test_png_placeholder.cpp  test_project_ops.cpp  test_project_tab_ops.cpp  test_split_fixtures.cpp
tests/libslic3r/: test_config.cpp
